fix: change unique validation