@@ -18,36 +18,40 @@ import java.lang.annotation.*;
 
 @Target({ ElementType.TYPE, ElementType.ANNOTATION_TYPE })
 @Retention(RetentionPolicy.RUNTIME)
-@Constraint(validatedBy = { UniqueNameGaugeStation.ValidatorUniqueNameGaugeStation.class })
+@Constraint(validatedBy = { UniqueNumberGaugeStation.ValidatorUniqueNameGaugeStation.class })
 @Documented
-public @interface UniqueNameGaugeStation {
+public @interface UniqueNumberGaugeStation {
 
     String message() default "{unique}";
     Class<?>[] groups() default { };
     Class<? extends Payload>[] payload() default { };
     String label();
 
-    class ValidatorUniqueNameGaugeStation implements ConstraintValidator<UniqueNameGaugeStation, DTORequestGaugeStation> {
+    class ValidatorUniqueNameGaugeStation implements ConstraintValidator<UniqueNumberGaugeStation, DTORequestGaugeStation> {
 
         private String values;
         @Autowired
         private ServiceGaugeStation serviceGaugeStation;
 
         @Override
-        public void initialize(UniqueNameGaugeStation constraintAnnotation) {
+        public void initialize(UniqueNumberGaugeStation constraintAnnotation) {
             this.values = constraintAnnotation.label();
         }
         @Override
         public boolean isValid(DTORequestGaugeStation value, ConstraintValidatorContext context) {
-            if (value == null || value.number() == null || value.number().trim().isEmpty()) {
-                return false;
+            if (value == null || value.number() == null || value.number().isBlank())
+                return true;
+            boolean isUnique = (value.id() == null)
+                ? !serviceGaugeStation.existsByNumber(value.number().trim()  )
+                : !serviceGaugeStation.existsByNumberAndIdNot(value.number().trim(), value.id());
+            if (!isUnique) {
+                context.disableDefaultConstraintViolation();
+                context.buildConstraintViolationWithTemplate(
+                        context.getDefaultConstraintMessageTemplate()
+                                .replace("{label}", values)
+                ).addConstraintViolation();
             }
-            String normalizedName = value.title().trim();
-            if (value.id() == null) {
-                return !serviceGaugeStation.existsByNumber(normalizedName);
-            } else {
-                return !serviceGaugeStation.existsByNumberAndIdNot(normalizedName, value.id());
-            }
+            return isUnique;
         }
     }
 }
